[package]
name = "ckiesite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
combine = "4.6.3"
html-minifier = "3.0.14"
syntect = "4.6.0"
typed-html = { git = "https://github.com/bodil/typed-html",  rev = "e18d328951b6b9216976d180f3dea2e6600a3982"}
