[package]
name = "orgish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
combine = "4.6.3"
syntect = "4.6.0"
tracing = "0.1.32"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
owo-colors = "3.4.0"
