[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ] }
html-minifier = "3.0.14"
anyhow = "1.0.52"
axum = "0.4.8"
tokio = { version = "1.17.0", features = [ "full" ] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
thiserror = "1.0.30"
hyper = { version = "0.14.18", features = [ "full" ] }
tower = { version = "0.4.12", features = [ "full" ] }
tower-http = { version = "0.2.5", features = [ "fs" ] }
cap-std = "0.24.2"
lazy_static = "1.4.0"
include_dir = "0.7.2"
org_doc = { path = "../org_doc" }
site_common = { path = "../site_common" }
bincode = "1.3.3"
